src/views/Home/Home.scss
@import "../../styles/fonts.scss";
@import "../../styles/colors.scss";
@import "../../styles/mixins.scss";
@import "../../styles/breakpoints.scss";

.home {
  &--welcome {
    background-color: $purple;
    margin-top: space(20) !important;
    padding: space(120) !important;
    position: relative;

    @include for-small-phone {
      padding: space(32) !important;
    }

    @include for-phone-only {
      padding: space(40) !important;
      padding-bottom: space(120) !important;
    }

    @include for-tablet-down {
      margin-top: 0 !important;
    }

    &--title {
      @include heading-l;
      color: $white;
    }

    &--subtitle {
      @include body-s;
      color: $white;
    }

    &--logo-container {
      display: flex;
      align-items: center;
      margin-top: space(10);
      margin-bottom: space(64);
      flex-wrap: wrap;

      @include for-tablet-down {
        svg {
          width: 90px;
        }
      }
    }

    &--ppl {
      width: pxtorem(68px);

      @include for-tablet-down {
        width: pxtorem(50px);
      }
    }

    &--logos {
      margin-right: space(20);
      display: inline-block;

      @include for-tablet-down {
        margin-right: space(10);
      }
    }

    &--about {
      @include body-l;
      color: $white;
    }

    &--bubbles {
      position: absolute;
      @include for-tablet-large-up {
        top: 25%;
        right: 20%;
        width: 400px;
      }

      @include for-desktop-down {
        right: 15%;
      }

      @include for-tablet-large-down {
        width: 300px;
        bottom: -100px;
        margin-left: auto;
        margin-right: auto;
        left: 0;
        right: 0;
      }

      @include for-phone-only {
        width: 250px;
        bottom: -85px;
      }
    }

    &--calendar {
      color: $medium-purple;
      position: absolute;
      right: 20%;

      @include for-phone-only {
        right: -40px;
      }

      svg {
        height: 65px;

        @include for-tablet-down {
          height: 45px;
        }
      }
    }

    &--flower {
      color: $medium-purple;
      position: absolute;
      right: 15%;
      top: 35%;

      @include for-desktop-down {
        right: 10%;
      }

      @include for-phone-only {
        right: -40px;
      }

      svg {
        height: 65px;

        @include for-tablet-down {
          height: 55px;
        }
      }
    }

    &--trolley {
      color: $medium-purple;
      position: absolute;
      right: 20%;
      bottom: 10%;

      @include for-phone-only {
        right: -10px;
      }

      svg {
        height: 65px;

        @include for-tablet-down {
          height: 45px;
        }
      }
    }
  }

  &--experiences {
    padding: pxtorem(169px) 0;
    background-color: $light-green;
    text-align: center;

    @include for-phone-only {
      margin-top: space(72);
      padding: space(48) 0 space(64);
    }

    &--title {
      @include heading-m;
      color: $navy;
    }

    &--content {
      @include about-accordian-text;
      color: $navy;
      margin-top: space(32);
      margin-bottom: space(80);

      @include for-phone-only {
        margin-bottom: space(64);
      }
    }
  }

  &--share {
    padding-top: space(112) !important;
    padding-bottom: space(112) !important;

    @include for-phone-only {
      padding: space(112) space(40) !important;

      button {
        margin-top: space(16);
      }
    }

    &--title {
      @include heading-m;
      color: $navy;
      text-align: center;
      margin-bottom: space(56);

      @include for-tablet-down {
        line-height: 1;
        margin-bottom: space(40);
      }
    }

    &--description {
      @include body-l;
      color: $navy;
      display: flex;
      align-items: center;
      margin: space(24) 0;

      &:first-of-type {
        margin-top: 0;
      }

      svg {
        width: 60px;
      }
      h5 {
        margin-left: space(20);
      }
    }

    &--content {
      @include body-m;
      font-weight: 400;
      color: $navy;
      margin-top: space(40);

      @include for-phone-only {
        margin-top: space(32);
      }
    }

    &--button-container {
      text-align: center;
    }
  }

  &--footer {
    padding-top: space(120) !important;
    padding-bottom: space(120) !important;
    position: relative;

    @include for-phone-only {
      padding-top: space(40) !important;
      padding-bottom: space(56) !important;
    }

    @include for-tablet-large-down {
      flex-wrap: wrap-reverse !important;
    }

    &--image {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      img {
        width: 350px;

        @include for-phone-only {
          width: 250px;
        }
      }
    }

    &--title {
      @include heading-s;
      color: $navy;
      margin-bottom: space(40);
    }

    &--content {
      @include body-l;
      color: $navy;
      margin-bottom: space(80);

      p {
        margin: space(16) 0;
      }

      @include for-phone-only {
        margin-bottom: space(32);
      }
    }

    &--button {
      margin-bottom: space(80);

      @include for-phone-only {
        margin-bottom: space(32);
      }

      a {
        padding: space(16) space(20);
      }
    }

    &--contact {
      @include heading-xs;
      color: $purple;
      margin-top: space(24);

      a {
        @include body-l;
        color: $purple;
        display: block;
      }
    }
  }
}

